--- a/JDWeb/WebRoot/css/userRegister.css
+++ b/JDWeb/WebRoot/css/userRegister.css
@@ -477,6 +477,59 @@
     	border-radius: 2px;
 		cursor:pointer;
 	}
+	#step3_input
+	{
+		position:absolute;
+		top:30px;
+		left:20%;
+		width:60%;
+		height:360px;
+		display:none;
+	}
+	#step3_result
+	{
+		position:absolute;
+		top:0px;
+		left:10%;
+		width:90%;
+		height:45px;
+	}
+	.step3_pic
+	{
+		position:absolute;
+		top:8px;
+		left:10%;
+		width:30px;
+		height:30px;
+		display:none;
+	}
+	#result_text
+	{
+		position:absolute;
+		top:10px;
+		left:18%;
+		font-size:1.4vw;
+		font-family:Microsoft YaHei;
+	}
+	.step3_btn
+	{
+		position:absolute;
+		top:65px;
+		left:30%;
+		width:25%;
+		height:35px;
+		background-color:#FF7011;
+		text-align:center;
+		padding-top:5px;
+		color:white;
+		font-size:1.3vw;
+		font-family:Microsoft YaHei;
+		-moz-border-radius: 2px;
+    	-webkit-border-radius: 2px;
+    	border-radius: 2px;
+		cursor:pointer;
+		display:none;
+	}
 	#foot
 	{
 		position:absolute;
