--- a/JDWeb/WebRoot/css/headerCss.css
+++ b/JDWeb/WebRoot/css/headerCss.css
@@ -20,11 +20,13 @@
 	{
 		left:8%;
 		width:6%;
+		display:none;
 	}
 	#register
 	{
 		left:14%;
 		width:5%;
+		display:none;
 	}
 	#account
 	{
@@ -42,6 +44,7 @@
 		font-size:1vw;
 		font-family:Microsoft YaHei;
 		cursor:pointer;
+		display:none;
 	}
 	#login label,#register label,#account label
 	{
