--- a/JDWeb/WebRoot/users/css/userOrderView.css
+++ b/JDWeb/WebRoot/users/css/userOrderView.css
@@ -1,13 +1,32 @@
-	body,input,select
+﻿	body,input,select
 	{
 		font-family:Microsoft YaHei;
 	}
-	#orderTab
+	#title
 	{
 		position:absolute;
 		top:0px;
 		left:0px;
 		width:100%;
+		height:30px;
+		padding-top:8px;
+		font-size:18px;
+		text-indent:20px;
+		background-color:#EEEEEE;
+	}
+	#content
+	{
+		position:absolute;
+		top:40px;
+		left:0px;
+		width:100%;
+	}
+	#orderTab
+	{
+		position:absolute;
+		top:20px;
+		left:30px;
+		width:95%;
 		border-collapse:separate; 
 		border-spacing:0px 10px;
 	}
@@ -81,14 +100,15 @@
 		top:10px;
 		left:8px;
 		width:80px;
-		height:26px;
+		height:27px;
 		color:white;
 		background-color:#FF4444;
 		cursor:pointer;
-		padding-top:4px;
+		padding-top:2px;
 		-moz-border-radius: 2px;
     	-webkit-border-radius: 2px;
     	border-radius: 2px;
+    	display:none;
 	}
 	.confirmBtn
 	{
@@ -96,14 +116,15 @@
 		top:10px;
 		left:8px;
 		width:80px;
-		height:26px;
+		height:27px;
 		color:white;
 		background-color:#FF3300;
 		cursor:pointer;
-		padding-top:4px;
+		padding-top:2px;
 		-moz-border-radius: 2px;
     	-webkit-border-radius: 2px;
     	border-radius: 2px;
+    	display:none;
 	}
 	.Tip
 	{
